fixed row margin issue and updated z-index for sidebar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,7 @@ hr {
     height: 100%; /* 100% Full-height */
     width: 0; /* 0 width - change this with JavaScript */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
+    z-index: 2;
     top: 0;
     left: 0;
     background-color: #111; /* Black*/
@@ -324,7 +324,7 @@ margin-right: 5px;
     }
 
     .contact-body {
-        padding: 50px 30px 75px 30px;
+        padding: 10px 30px 75px 30px;
     }
 
     .navBar {
